# datasette-extract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_extract/: __init__.py
datasette_extract/static/: extract.css  heic2any-0.0.4.min.js  pdfjs-dist-4-0-379.js
datasette_extract/templates/: _extract_base_styles.html  _extract_drop_handler.html  _extract_heic.html  _extract_pdf_drop.html  extract.html  extract_create_table.html  extract_progress.html  extract_to_table.html
tests/: conftest.py  test_cli.py  test_web.py
tests/cassettes/test_web/: test_extract_flow.yaml
