[project]
name = "datasette-extract"
version = "0.1a12"
description = "Import unstructured data (text and images) into structured tables"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a21",
    "datasette-secrets>=0.1a2",
    "llm>=0.24",
    "llm-openai-plugin",
    "sqlite-utils",
    "openai>=1.0",
    "ijson",
    "python-ulid",
    "starlette",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-extract"
Changelog = "https://github.com/datasette/datasette-extract/releases"
Issues = "https://github.com/datasette/datasette-extract/issues"
CI = "https://github.com/datasette/datasette-extract/actions"

[project.entry-points.datasette]
extract = "datasette_extract"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-recording"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_extract = ["static/*", "templates/*"]
