[project]
name = "datasette-extract"
version = "0.2a0"
description = "Import unstructured data (text and images) into structured tables"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a21",
    "datasette-secrets>=0.1a2",
    "llm>=0.24",
    "sqlite-utils",
    "ijson",
    "python-ulid",
    "starlette",
    "datasette-llm-accountant>=0.1a1",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-extract"
Changelog = "https://github.com/datasette/datasette-extract/releases"
Issues = "https://github.com/datasette/datasette-extract/issues"
CI = "https://github.com/datasette/datasette-extract/actions"

[project.entry-points.datasette]
extract = "datasette_extract"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-recording"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true

[tool.setuptools.package-data]
datasette_extract = ["static/*", "templates/*"]
